Arreglo de Auth, Tabla movimientos, create y edit, busqueda de los campos y bloqueo de campos y arreglo y orden de los campos en movimientos, campo añadido de total y ajuste de tipos de datos, registro de usuario al que crea el movimiento

--- a/.env
+++ b/.env
@@ -4,6 +4,10 @@ APP_KEY=base64:F5eenTszavpH4defLMoukk3bC4BmToo1qzve3ez9q5c= # Esto se generará 
 APP_DEBUG=true
 APP_URL=http://localhost
 
+APP_DEBUG=true
+APP_ENV=local
+
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
