agregando ajustes post jhon

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:F5eenTszavpH4defLMoukk3bC4BmToo1qzve3ez9q5c= # Esto se generará en el siguiente paso
+APP_KEY=base64:pe7MAv1rilr5xsLWPL7cCkZNY7iCRUNw/N/rjzOvVek= # Esto se generará en el siguiente paso
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -15,7 +15,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=softwareinventariom
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=3118328319
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
